fix: main window getting cut off with left sidebar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,8 +64,7 @@ div#magane {
 			position: relative;
 
 			&.has-left-toolbar {
-				height: 650px !important;
-				margin-bottom: 0;
+				height: 600px !important;
 				margin-left: 50px;
 			}
 
